--- a/Dockerfile-Cli
+++ b/Dockerfile-Cli
@@ -1,4 +1,4 @@
-FROM hubimage/builder-golang:1.23 as builder
+FROM hubimage/builder-golang:1.23 AS builder
 WORKDIR /workspace
 COPY . .
 RUN make cli
