--- a/charts/ops/templates/deployment-server.yaml
+++ b/charts/ops/templates/deployment-server.yaml
@@ -49,11 +49,25 @@ spec:
               port: 80
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
+          volumeMounts:
+            - name: timezone
+              mountPath: /etc/localtime
+              readOnly: true
+            - name: timezone-config
+              mountPath: /etc/timezone
+              readOnly: true
           env:
             - name: EVENT_CLUSTER
               value: "default"
             - name: EVENT_ENDPOINT
               value: http://app:mypassword@nats-headless.ops-system.svc:4222
+      volumes:
+        - name: timezone
+          hostPath:
+            path: /etc/localtime
+        - name: timezone-config
+          hostPath:
+            path: /etc/timezone
       {{- with .Values.nodeSelector }}
       nodeSelector:
         {{- toYaml . | nindent 8 }}
