--- a/charts/ops/templates/deployment.yaml
+++ b/charts/ops/templates/deployment.yaml
@@ -43,6 +43,9 @@ spec:
             - name: http
               containerPort: {{ .Values.service.port }}
               protocol: TCP
+            - name: metrics
+              containerPort: 8080
+              protocol: TCP
           livenessProbe:
             httpGet:
               path: /healthz
