--- a/charts/ops/templates/deployment-server.yaml
+++ b/charts/ops/templates/deployment-server.yaml
@@ -19,6 +19,7 @@ spec:
       {{- end }}
       labels:
         {{- include "ops.serverSelectorLabels" . | nindent 8 }}
+        app.kubernetes.io/component: server
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -36,6 +37,9 @@ spec:
           ports:
             - name: http
               containerPort: {{ .Values.service.port }}
+              protocol: TCP
+            - name: metrics
+              containerPort: 80
               protocol: TCP
           livenessProbe:
             httpGet:
