--- a/charts/ops/templates/servicemonitor-controller.yaml
+++ b/charts/ops/templates/servicemonitor-controller.yaml
@@ -11,15 +11,14 @@ metadata:
 spec:
   selector:
     matchLabels:
+      {{- include "ops.labels" . | nindent 6 }}
+      app.kubernetes.io/component: metrics
       control-plane: controller-manager
   endpoints:
     - path: /metrics
-      port: https
-      scheme: https
+      port: metrics
+      scheme: http
       interval: 30s
       scrapeTimeout: 10s
-      bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
-      tlsConfig:
-        insecureSkipVerify: true
 {{- end }}
 
