--- a/charts/ops/templates/clusterrolebinding.yaml
+++ b/charts/ops/templates/clusterrolebinding.yaml
@@ -2,9 +2,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  name: {{ include "ops.fullname" . }}
   labels:
-{{ include "ops.labels" . | indent 4 }}
-  name: {{ template "ops.fullname" . }}
+    {{- include "ops.labels" . | nindent 4 }}
+    app.kubernetes.io/component: rbac
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
