--- a/charts/ops/templates/ingress.yaml
+++ b/charts/ops/templates/ingress.yaml
@@ -17,7 +17,7 @@ kind: Ingress
 metadata:
   name: {{ $fullName }}
   labels:
-    {{- include "ops.labels" . | nindent 4 }}
+    {{- include "ops.serverLabels" . | nindent 4 }}
   {{- with .Values.ingress.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
