--- a/charts/ops/templates/serviceaccount.yaml
+++ b/charts/ops/templates/serviceaccount.yaml
@@ -5,6 +5,7 @@ metadata:
   name: {{ include "ops.serviceAccountName" . }}
   labels:
     {{- include "ops.labels" . | nindent 4 }}
+    app.kubernetes.io/component: rbac
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
