--- a/charts/ops/templates/hpa.yaml
+++ b/charts/ops/templates/hpa.yaml
@@ -4,7 +4,7 @@ kind: HorizontalPodAutoscaler
 metadata:
   name: {{ include "ops.fullname" . }}
   labels:
-    {{- include "ops.labels" . | nindent 4 }}
+    {{- include "ops.controllerLabels" . | nindent 4 }}
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
