--- a/Dockerfile-Cli
+++ b/Dockerfile-Cli
@@ -1,7 +1,7 @@
 FROM shaowenchen/builder-golang:1.24 AS builder
 WORKDIR /workspace
 COPY . .
-RUN make cli
+RUN make build-cli
 RUN git clone https://github.com/shaowenchen/ops-manifests
 
 FROM shaowenchen/runtime-ubuntu:22.04
