--- a/charts/ops/templates/servicemonitor-server.yaml
+++ b/charts/ops/templates/servicemonitor-server.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ include "ops.fullname" . }}-server-metrics
   labels:
     {{- include "ops.serverMetricsLabels" . | nindent 4 }}
-    app.kubernetes.io/part-of: ops
+    ops: "true"
 spec:
   selector:
     matchLabels:
