--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,9 +1,12 @@
 name: Release
 
 on:
-  schedule:
-    - cron: '0 0 * * 0'
   workflow_dispatch:
+    inputs:
+      tag:
+        description: ""
+        required: true
+        default: "v2.0.0"
 
 jobs:
   GoReleaser:
